[gd_scene format=3 uid="uid://cajjtd2c6lteo"]

[ext_resource type="Script" uid="uid://tkhwv4j7idm0" path="res://scenes/ui/game_over.gd" id="1_60xr3"]
[ext_resource type="Texture2D" uid="uid://c5mrbgu5glgur" path="res://assets/backgrounds/blue-back.png" id="2_fu4wh"]

[node name="GameOver" type="Control" unique_id=1957905248]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_60xr3")

[node name="TextureRect" type="TextureRect" parent="." unique_id=670965306]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_fu4wh")
expand_mode = 4

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=77599045]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="Panel" type="Panel" parent="MarginContainer" unique_id=1643242546]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Panel" unique_id=487476825]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel/MarginContainer" unique_id=1218185248]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="LabelGameOver" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer" unique_id=1739274848]
layout_mode = 2
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/Panel/MarginContainer/VBoxContainer" unique_id=1946755159]
layout_mode = 2

[node name="LabelStats" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer" unique_id=1378709209]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Score 
999999999
Enemies Defeated
999999999"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/Panel/MarginContainer/VBoxContainer" unique_id=769787173]
layout_mode = 2

[node name="ButtonRetry" type="Button" parent="MarginContainer/Panel/MarginContainer/VBoxContainer" unique_id=1145004003]
layout_mode = 2
text = "Retry"

[node name="ButtonExit" type="Button" parent="MarginContainer/Panel/MarginContainer/VBoxContainer" unique_id=200105543]
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="MarginContainer/Panel/MarginContainer/VBoxContainer/ButtonRetry" to="." method="_on_button_retry_pressed"]
[connection signal="pressed" from="MarginContainer/Panel/MarginContainer/VBoxContainer/ButtonExit" to="." method="_on_button_exit_pressed"]
